src/gateway/manifests/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels: 
    app: gateway
spec:
  replicas:  2
  selector:
    matchLabels:
      app: gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template: #own section below; template for pods to be created 
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: yupete/gateway
